
- Support for libxmp for tracker music decoding (disabled by default.)

- New AmigaOS MIDI driver using CAMD library.

- Several optimized assembler sources for m68k-amigaos.

- gcc is now supported to target m68k-amigaos.

- Software renderer: Reduced some 2D overdraw. Faster model lighting.

- Recursion optimizations to server world query procedures.

- Other minor fixes, tidy-ups, and protability tweaks.


========================================================================
Changes in v1.5.8a (Aug. 28, 2016)
========================================================================

This is a post-release patch against v1.5.8 fixing a few Amiga issues:

- Amiga sound (AHI backend): fix sample rates lower than 11025 Hz.

- Amiga sound (AHI backend): fix bad sound with sample rates which are
  not a multiple of 11025.

- Amiga input: limit lowlevel.library joystick ports to 0-3.

- AmigaOS3, MiniGL: smart and automatic locking support.  New cvar:
  gl_lockmode, valid values: "manual" (default), "auto", and "smart".


========================================================================
Changes in v1.5.8: (Aug. 12, 2016.)
========================================================================

This is a minor bug fix and maintenance release:

- Software renderer: Fixed a reported crash if the engine is compiled
  with certain Visual Studio versions (bug #62.)

- Software renderer: Fixed sky scaling issues, thanks to Szilard Biro.
 (fix found in 'ToChriS' quake source.)

- Software renderer: Fixed scaling console backgrounds whose dimensions
  are not the default 320x200. One such example is the "Game of Tomes"
  mod which has a 1024x768 conback.lmp.

- Hexenworld server: Added "-protocol x" command line option to force
  the server to use a specific protocol (25 or 26), if so required.

- Amiga: Video fixes. On AROS, the game does not 'freeze' in fullscreen
  mode anymore if the 'Timidity:' assign is not present.
